[gd_scene load_steps=2 format=3 uid="uid://bpysfvqwd0p53"]

[ext_resource type="Script" path="res://Scenes/MultiplayerScreen/MultiplayerController.gd" id="1_iu4fj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iu4fj")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 155.0
offset_right = 142.0
offset_bottom = 186.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 206.0
offset_right = 146.0
offset_bottom = 237.0
text = "Join"

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 255.0
offset_right = 153.0
offset_bottom = 286.0
text = "Start Game"

[node name="NameEntry" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 41.0
offset_right = 448.0
offset_bottom = 72.0

[node name="ServerEntry" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 77.0
offset_right = 447.0
offset_bottom = 108.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 44.0
offset_right = 120.0
offset_bottom = 67.0
text = "Name:"

[node name="ServerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 83.0
offset_right = 119.0
offset_bottom = 106.0
text = "Server:"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 300.0
offset_right = 126.0
offset_bottom = 331.0
text = "Back
"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start Game" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
